--- a/package.json
+++ b/package.json
@@ -11,8 +11,19 @@
     },
     "devDependencies": {
         "axios": "^0.21",
+        "deepmerge": "^4.2.2",
+        "fibers": "^5.0.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "sass": "^1.34.1",
+        "sass-loader": "^12.0.0",
+        "vue-loader": "^15.9.7",
+        "vue-template-compiler": "^2.6.14",
+        "vuetifyjs-mix-extension": "0.0.20"
+    },
+    "dependencies": {
+        "vue": "^2.6.14",
+        "vuetify": "^2.5.3"
     }
 }
